--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
         <h3>&copy;Copyright</h3>
     </footer>
 </div>
-    
     <script type ="module" src="./modules/Books.js"></script>
-    <script type ="module" src="./modules/Display.js"></script>
-    <script type ="module" src="js/index.js"></script>
+    <script type ="module" src="./modules/Display.js"> </script>
+    <script type ="module" src="./modules/index.js"> </script>
+    
   </body>
 </html>
