fixed suggested errors

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <h3>&copy;Copyright</h3>
     </footer>
 </div>
-     <script type ="module" src="./modules/index.js"> </script>
+     <script type ="module" src="./index.js"> </script>
     
   </body>
 </html>
